cleanup and removed dead code